Fixed issue with modal spinner not showing up

--- a/recordedit/recordEdit.css
+++ b/recordedit/recordEdit.css
@@ -85,3 +85,7 @@ input[type=number]::-webkit-outer-spin-button {
         max-height: 55vh;
     }
 }
+
+#spinner{ 
+  top: 25vh;
+}
